istio/gateways-and-virtualservices/gateway-object.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: central-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
